@startuml

package flyweight {

class Forest {
    +plantTree(x : int, y : int, name : String, leafTexture : String, barkTexture : String, color : String) : void
    +totalTrees() : int
}

class TreeFactory {
    +getTreeType(name : String, leafTexture : String, barkTexture : String, color : String) : TreeType
    -treeTypes : Map<String, TreeType>
}

class TreeType {
    +name : String
    +leafTexture : String
    +barkTexture : String
    +color : String
    +getName() : String
}

class Tree {
    -x : int
    -y : int
    -type : TreeType
    +display() : void
}

Forest --> TreeFactory : solicita TreeType
TreeFactory "1" *-- "*" TreeType : cache/memory
Tree --> TreeType : usa
Forest --> Tree : crea árboles (con Flyweights)

}

@enduml

